--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,16 +73,22 @@ ul.pagination {
       @extend .d-flex;
       @extend .align-items-center;
 
+      a {
+        @extend .me-1;
+
+        .avatar {
+          background-color: $gray-200;
+          max-width: 1.5rem;
+          max-height: auto;
+          border-radius: 100%;
+        }
+      }
+
       .name {
         @extend .text-truncate;
       }
 
-      .avatar {
-        background-color: $gray-200;
-        max-width: 1.5rem;
-        max-height: auto;
-        border-radius: 100%;
-      }
+
     }
   }
 
@@ -206,20 +212,55 @@ ul.pagination {
 
 /* home */
 .row-home-main-frame {
-  @extend .row, .row-cols-1;
+  @extend .row;
   @extend .justify-content-center;
+  @extend .gy-3;
 
-  .top-page-banner {
-    @extend .col;
+  .col-registration-banner-pane {
+    @extend .col-12;
     @extend .py-5;
     @extend .text-center, .text-white;
+
+    .links-to-enter {
+      @extend .d-flex;
+      @extend .justify-content-center, .align-items-center;
+    }
   }
 
-  .banner-background {
+  .registration-banner-background {
     background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), image-url('home_bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+  }
+
+  .col-pickle-pane {
+    @extend .col-md-6;
+    @extend .pt-3;
+
+    .pickle-section {
+      @extend .p-3;
+      background-color: $gray-300;
+      border-radius: 10px;
+    }
+  }
+
+  .col-journal-pane {
+    @extend .col-md-6;
+    @extend .pt-3;
+
+    .journal-section {
+      @extend .p-3;
+      background-color: $gray-300;
+      border-radius: 10px;
+    }
+  }
+
+  .link-to-pickles,
+  .link-to-journals {
+    @extend .pt-2;
+    @extend .text-end;
+    border-top: 1px solid $gray-500;
   }
 }
 
