--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,10 +8,10 @@
         <ul class="navbar-nav ms-auto">
           <% if user_signed_in? %>
             <li class="nav-item"><%= link_to t('visit_current_user_page', scope: 'users'), current_user, class: 'nav-link' %></li>
-            <li class="nav-item"><%= link_to t('sign_out', scope: 'users.sessions.destroy') , destroy_user_session_path, class: 'nav-link', id: 'sign-out-link', data: { "turbo-method": :delete } %></li>
+            <li class="nav-item"><%= link_to t('users.sessions.destroy.sign_out') , destroy_user_session_path, class: 'nav-link', id: 'sign-out-link', data: { "turbo-method": :delete } %></li>
           <% else %>
-            <li class="nav-item"><%= link_to t('sign_in', scope: 'users.sessions.new') , new_user_session_path, class: 'nav-link' %></li>
-            <li class="nav-item"><%= link_to t('sign_up', scope: 'users.registrations.new') , new_user_registration_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to t('users.shared.links.sign_in') , new_user_session_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to t('users.shared.links.sign_up') , new_user_registration_path, class: 'nav-link' %></li>
           <% end %>
         </ul>
       </div>
