--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -69,9 +69,7 @@
         </div>
       <% else %>
         <%= turbo_frame_tag 'pickle-list' do %>
-          <% @pickles.each do |pickle| %>
-            <%= render 'pickles/pickle', pickle: pickle %>
-          <% end %>
+          <%= render @pickles %>
           <%= paginate @pickles %>
         <% end %>
       <% end %>
