Show page title and app title on browser title bar

--- a/app/views/pickles/edit.html.erb
+++ b/app/views/pickles/edit.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, t('.edit_pickle') %>
+
 <%= render 'users/shared/error_messages', resource: @pickle %>
 
 <div class="row-pickle-form-main-frame">
