--- a/app/views/pickles/index.html.erb
+++ b/app/views/pickles/index.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, t('.title') %>
+
 <div class="row-pickles-main-frame">
   <div class="col-pickles-pane">
     <div class="pickle-section">
