--- a/app/views/pickles/show.html.erb
+++ b/app/views/pickles/show.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, @pickle.name %>
+
 <% profile = @pickle.user.profile %>
 <div class="row-pickle-main-frame">
   <div class="col-header-pane">
