--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, t('.title') %>
+
 <%= render "users/shared/error_messages", resource: @profile %>
 
 <div class="row-devise-main-frame">
