--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<% profile=@user.profile %>
+<% profile = @user.profile %>
+<% provide :title, profile.display_name %>
 
 <div class="row-user-main-frame">
   <div class="col-profile-pane">
