--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, t('.unlock_account') %>
+
 <%= render "users/shared/error_messages", resource: resource %>
 
 <div class="row-devise-main-frame">
