--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, t('.title') %>
+
 <div class="row-journals-main-frame">
   <div class="col-journals-pane">
     <div class="journal-section">
