--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, t('.title') if user_signed_in? %>
+
 <div class="row-home-main-frame">
   <% unless user_signed_in? %>
     <div class="col-registration-banner-pane registration-banner-background">
