--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,9 +1,10 @@
+<%= provide :title, t('.title') %>
 <%= render "users/shared/error_messages", resource: resource %>
 
 <div class="row-devise-main-frame">
   <div class="col-devise-content-pane">
     <div class="devise-form">
-      <h2><%= t('.title', resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: 'registrations.edit.title')) %></h2>
+      <h2><%= yield :title %></h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
