--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,10 +1,12 @@
+<% provide :title, t('.sign_up') %>
+
 <%= render "users/shared/error_messages" , resource: resource %>
 
 <div class="row-devise-main-frame">
   <div class="col-devise-content-pane">
     <div class="devise-form">
       <h2>
-        <%= t('.sign_up') %>
+        <%= yield :title %>
       </h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
