Render the first page of journals after a new journal is created

--- a/app/views/journals/create.turbo_stream.erb
+++ b/app/views/journals/create.turbo_stream.erb
@@ -1,4 +1,6 @@
-<%= turbo_stream.prepend 'journals', @journal %>
+<%= turbo_stream.update 'journal-list' do %>
+  <%= render 'paginated_journals' %>
+<% end %>
 
 <%= turbo_stream.remove 'no-journals-yet' %>
 
