Render the nearest page of journals after a journal is destroyed

--- a/app/views/journals/_paginated_journals.html.erb
+++ b/app/views/journals/_paginated_journals.html.erb
@@ -1,2 +1,7 @@
-<%= render @journals %>
-<%= paginate @journals %>
+<div id="journal-list">
+  <%= render @journals %>
+</div>
+<div id="journal-pagination">
+  <%= paginate @journals %>
+</div>
+
