--- a/app/views/journals/create.turbo_stream.erb
+++ b/app/views/journals/create.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.update 'journal-list' do %>
+<%= turbo_stream.update 'paginated-journals' do %>
   <%= render 'paginated_journals' %>
 <% end %>
 
