--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -8,11 +8,8 @@
 
       <div class="journal-list-section">
         <%= content_tag 'div', t('journals.shared.no_journals_yet'), id: 'no-journals-yet', class: 'no-journals-yet' if @journals.empty? %>
-        <%= turbo_frame_tag 'journal-list' do %>
-          <div id="journals">
-            <%= render @journals %>
-          </div>
-          <%= paginate @journals %>
+        <%= turbo_frame_tag 'paginated-journals' do %>
+          <%= render 'paginated_journals' %>
         <% end %>
       </div>
     </div>
