--- a/app/views/pickles/show.html.erb
+++ b/app/views/pickles/show.html.erb
@@ -75,7 +75,7 @@
 
       <div class="journal-list-section">
         <%= content_tag 'div', t('journals.shared.no_journals_yet'), id: 'no-journals-yet', class: 'no-journals-yet' if @journals.empty? %>
-        <%= turbo_frame_tag 'journal-list' do %>
+        <%= turbo_frame_tag 'paginated-journals' do %>
           <%= render 'journals/paginated_journals' %>
         <% end %>
       </div>
