Show message when there is no journals properly

--- a/app/views/journals/destroy.turbo_stream.erb
+++ b/app/views/journals/destroy.turbo_stream.erb
@@ -6,8 +6,10 @@
   <%= paginate @journals %>
 <% end %>
 
-<%= turbo_stream.append 'journal-list' do %>
-  <%= content_tag 'div', t('journals.shared.no_journals_yet'), id: 'no-journals-yet', class: 'no-journals-yet' if current_user.journals.empty? %>
+<% if @journals.empty? %>
+  <%= turbo_stream.before 'journal-list' do %>
+    <%= content_tag 'div', t('journals.shared.no_journals_yet'), id: 'no-journals-yet', class: 'no-journals-yet' %>
+  <% end %>
 <% end %>
 
 <%= turbo_stream.update 'flash', partial: 'flash' %>
